Templates Service part 1

--- a/src/Acted/LegalDocsBundle/Resources/config/services.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    acted_legal_docs.example:
-#        class: Acted\LegalDocsBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    templates:
+        class: Acted\LegalDocsBundle\Services\TemplatesService
+        arguments: ["@service_container"]
