--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "doctrine/doctrine-migrations-bundle": "1.1.1"
+        "doctrine/doctrine-migrations-bundle": "1.1.1",
+        "tfox/mpdf-port-bundle": "1.3.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
