--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-migrations-bundle": "1.1.1",
-        "tfox/mpdf-port-bundle": "1.3.*"
+        "tfox/mpdf-port-bundle": "1.3.*",
+        "stfalcon/tinymce-bundle": "dev-master"
+
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
