--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/ArtistRating.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/ArtistRating.orm.yml
@@ -1,7 +1,7 @@
-Acted\LegalDocsBundle\Entity\DynArtistRating:
+Acted\LegalDocsBundle\Entity\ArtistRating:
     type: entity
-    table: null
-    repositoryClass: Acted\LegalDocsBundle\Repository\DynArtistRatingRepository
+    table: ArtistRating
+    repositoryClass: Acted\LegalDocsBundle\Repository\ArtistRatingRepository
     id:
         id:
             type: integer
@@ -10,20 +10,18 @@ Acted\LegalDocsBundle\Entity\DynArtistRating:
                 strategy: AUTO
     fields:
         eventId:
-          type: bigint(20)
-          primary: true
+          type: integer(20)
           notnull: true
         artistId:
-          type: bigint(20)
-          primary: true
+          type: integer(20)
           notnull: true
         rating:
-          type: int(3)
+          type: integer(3)
           notnull: true
         title:
-          type: varchar(128)
+          type: string(128)
         comments:
-          type: varchar(512)
+          type: string(512)
         ratingDateTime:
           type: datetime
           notnull: true
