--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Document.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Document.orm.yml
@@ -1,7 +1,7 @@
-Acted\LegalDocsBundle\Entity\DynDocument:
+Acted\LegalDocsBundle\Entity\Document:
     type: entity
-    table: null
-    repositoryClass: Acted\LegalDocsBundle\Repository\DynDocumentRepository
+    table: Document
+    repositoryClass: Acted\LegalDocsBundle\Repository\DocumentRepository
     id:
         id:
             type: integer
@@ -9,22 +9,17 @@ Acted\LegalDocsBundle\Entity\DynDocument:
             generator:
                 strategy: AUTO
     fields:
-        documentId:
-          type: bigint(20)
-          primary: true
-          autoincrement: true
-          notnull: true
         eventId:
-          type: bigint(20)
+          type: integer(20)
           notnull: true
         documentType:
-          type: varchar(32)
+          type: string(32)
           notnull: true
         documentName:
-          type: varchar(256)
+          type: string(256)
           notnull: true
           unique: true
         documentSize:
-          type: mediumint(9)
+          type: integer(9)
           notnull: true
     lifecycleCallbacks: {  }
