--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventExtra.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventExtra.orm.yml
@@ -1,7 +1,7 @@
-Acted\LegalDocsBundle\Entity\DynEventExtra:
+Acted\LegalDocsBundle\Entity\EventExtra:
     type: entity
-    table: null
-    repositoryClass: Acted\LegalDocsBundle\Repository\DynEventExtraRepository
+    table: EventExtra
+    repositoryClass: Acted\LegalDocsBundle\Repository\EventExtraRepository
     id:
         id:
             type: integer
@@ -9,23 +9,18 @@ Acted\LegalDocsBundle\Entity\DynEventExtra:
             generator:
                 strategy: AUTO
     fields:
-        extraId:
-          type: bigint(20)
-          primary: true
-          autoincrement: true
-          notnull: true
         eventId:
-          type: bigint(20)
+          type: integer(20)
           notnull: true
         name:
-          type: varchar(128)
+          type: string(128)
           notnull: true
         price:
           type: double
           notnull: true
         currencyId:
-          type: int(11)
+          type: integer(11)
           notnull: true
         comments:
-          type: varchar(256)
+          type: string(256)
     lifecycleCallbacks: {  }
