--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventService.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventService.orm.yml
@@ -1,7 +1,7 @@
-Acted\LegalDocsBundle\Entity\DynEventOffer:
+Acted\LegalDocsBundle\Entity\EventService:
     type: entity
-    table: null
-    repositoryClass: Acted\LegalDocsBundle\Repository\DynEventOfferRepository
+    table: EventService
+    repositoryClass: Acted\LegalDocsBundle\Repository\EventServiceRepository
     id:
         id:
             type: integer
@@ -10,32 +10,30 @@ Acted\LegalDocsBundle\Entity\DynEventOffer:
                 strategy: AUTO
     fields:
         eventId:
-          type: bigint(20)
-          primary: true
+          type: integer(20)
           notnull: true
-        offerId:
-          type: bigint(20)
-          primary: true
+        serviceId:
+          type: integer(20)
           notnull: true
         status:
-          type: varchar(32)
+          type: string(32)
           notnull: true
         price:
           type: double
           notnull: true
         currencyId:
-          type: int(11)
+          type: integer(11)
           notnull: true
         depositValue:
           type: double
           notnull: true
         depositType:
-          type: varchar(32)
+          type: string(32)
           notnull: true
         paymentTerms:
-          type: varchar(256)
+          type: string(256)
         comments:
-          type: varchar(256)
+          type: string(256)
         sendDateTime:
           type: datetime
           notnull: true
