--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/ProfileMedia.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/ProfileMedia.orm.yml
@@ -1,7 +1,7 @@
-Acted\LegalDocsBundle\Entity\DynProfileMedia:
+Acted\LegalDocsBundle\Entity\ProfileMedia:
     type: entity
-    table: null
-    repositoryClass: Acted\LegalDocsBundle\Repository\DynProfileMediaRepository
+    table: ProfileMedia
+    repositoryClass: Acted\LegalDocsBundle\Repository\ProfileMediaRepository
     id:
         id:
             type: integer
@@ -11,10 +11,8 @@ Acted\LegalDocsBundle\Entity\DynProfileMedia:
     fields:
         mediaId:
           type: bigint(20)
-          primary: true
           notnull: true
         profileId:
           type: bigint(20)
-          primary: true
           notnull: true
     lifecycleCallbacks: {  }
