Entities fix - done

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -22,7 +22,7 @@ Acted\LegalDocsBundle\Entity\Artist:
         paymentDetails:
           type: string(512)
         vatRate:
-          type: double
+          type: float
         comments:
           type: string(512)
         cityId:
