--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventOffer.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/EventOffer.orm.yml
@@ -19,13 +19,13 @@ Acted\LegalDocsBundle\Entity\EventOffer:
           type: string(32)
           notnull: true
         price:
-          type: double
+          type: float
           notnull: true
         currencyId:
           type: integer(11)
           notnull: true
         depositValue:
-          type: double
+          type: float
           notnull: true
         depositType:
           type: string(32)
