--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Profile.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Profile.orm.yml
@@ -25,7 +25,7 @@ Acted\LegalDocsBundle\Entity\Profile:
         performanceRange:
           type: integer(8)
         paymentTypeId:
-          type: int(11)
+          type: integer(11)
           notnull: true
         active:
           type: boolean
