added faker bundles; refactored Artist/User entities; added /profile/[slug] route

--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,15 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-migrations-bundle": "1.1.1",
         "tfox/mpdf-port-bundle": "1.3.*",
-        "stfalcon/tinymce-bundle": "dev-master"
+        "stfalcon/tinymce-bundle": "dev-master",
+        "cocur/slugify": "^2.0",
+        "davidbadura/faker-bundle": "^1.1"
 
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
-        "symfony/phpunit-bridge": "~2.7"
+        "symfony/phpunit-bridge": "~2.7",
+        "doctrine/doctrine-fixtures-bundle": "^2.3"
     },
     "scripts": {
         "post-install-cmd": [
