--- a/package.json
+++ b/package.json
@@ -14,7 +14,16 @@
     "gulp-uglify": "^1.4.1",
     "gulp-uglifycss": "^1.0.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssimport": "^3.0.1",
+    "gulp-if": "^1.2.5",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-uglifycss": "^1.0.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
