refactored Profile/User entities

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Profile.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Profile.orm.yml
@@ -30,4 +30,8 @@ Acted\LegalDocsBundle\Entity\Profile:
         active:
           type: boolean
           notnull: true
+    oneToOne:
+        user:
+          targetEntity: Acted\LegalDocsBundle\Entity\User
+          inversedBy: user
     lifecycleCallbacks: {  }
