--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
@@ -37,5 +37,9 @@ Acted\LegalDocsBundle\Entity\User:
         background:
           type: string(256)
           nullable: true
+    oneToOne:
+        profile:
+          targetEntity: Acted\LegalDocsBundle\Entity\Profile
+          mappedBy: profile
 
     lifecycleCallbacks: {  }
