refactored Media/Profile entities;

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Media.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Media.orm.yml
@@ -19,6 +19,7 @@ Acted\LegalDocsBundle\Entity\Media:
           type: string(256)
         mediaSize:
           type: integer(9)
+          nullable: true
         position:
           type: integer(11)
           notnull: true
