--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Profile.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Profile.orm.yml
@@ -34,4 +34,8 @@ Acted\LegalDocsBundle\Entity\Profile:
         user:
           targetEntity: Acted\LegalDocsBundle\Entity\User
           inversedBy: user
+    manyToMany:
+        media:
+          targetEntity: Acted\LegalDocsBundle\Entity\Media
+
     lifecycleCallbacks: {  }
