--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-cssimport": "^3.0.1",
     "gulp-if": "^1.2.5",
     "gulp-load-plugins": "^1.2.0",
+    "gulp-order": "^1.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-uglifycss": "^1.0.6"
