--- a/src/Acted/LegalDocsBundle/Resources/config/routing/profile.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/profile.yml
@@ -1,3 +1,7 @@
+profile_list:
+    path:     /list
+    defaults: { _controller: ActedLegalDocsBundle:Profile:list }
+    methods:  GET
 profile_show:
     path:     /{slug}
     defaults: { _controller: ActedLegalDocsBundle:Profile:show }
