--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
@@ -40,6 +40,6 @@ Acted\LegalDocsBundle\Entity\User:
     oneToOne:
         profile:
           targetEntity: Acted\LegalDocsBundle\Entity\Profile
-          mappedBy: profile
+          mappedBy: user
 
     lifecycleCallbacks: {  }
