added artist rating; refactored Artist entity; added Event fixtures

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -34,5 +34,10 @@ Acted\LegalDocsBundle\Entity\Artist:
     oneToOne:
         user:
           targetEntity: Acted\LegalDocsBundle\Entity\User
+    oneToMany:
+        ratings:
+          targetEntity: Acted\LegalDocsBundle\Entity\ArtistRating
+          mappedBy: artist
+
 
     lifecycleCallbacks: {  }
