--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "tfox/mpdf-port-bundle": "1.3.*",
         "stfalcon/tinymce-bundle": "dev-master",
         "cocur/slugify": "^2.0",
-        "davidbadura/faker-bundle": "^1.1"
+        "davidbadura/faker-bundle": "^1.1",
+        "knplabs/knp-paginator-bundle": "^2.5"
 
     },
     "require-dev": {
